# tachyon

./: .gitignore  .gitmodules  API.md  Cargo.toml  README.md
.github/workflows/: clippy.yml  rust.yml
benches/: executor.rs  long.rs  micro.rs  query.rs  read.rs  sum.rs  write.rs
benches/c_benchmark/: main.c  run.sh
data/: memory_dataset.csv
include/: TachyonDB.h  exports.h  test.cpp
scripts/: memory.rs
scripts/c/: run.sh  test.c
scripts/dev_experience/: create_database.sh
src/: api.rs  cli.rs  common.rs  lib.rs
src/common/: binarytree.rs  mod.rs  timeseries.rs
src/executor/: mod.rs  node.rs
src/query/: indexer.rs  planner.rs
src/storage/: compression.rs  file.rs  hash_map.rs  mod.rs  page_cache.rs  radix_tree.rs  writer.rs
src/utils/: common.rs  file_utils.rs  mod.rs  test_utils.rs
tachyon_benchmarks/: Cargo.toml
tachyon_benchmarks/benches/: read.rs  write.rs
tachyon_cli/: Cargo.toml  README
tachyon_cli/src/: cli.rs  main.rs
tachyon_cli/src/handlers/: command.rs  mod.rs  query.rs
tachyon_cli/src/handlers/commands/: debug.rs  info.rs  mod.rs
tachyon_cli/src/ingestion/: csv.rs  mod.rs
tachyon_cli/src/input/: csv.rs  mod.rs
tachyon_cli/src/output/: file.rs  graphical.rs  mod.rs  tabular.rs
tachyon_core/: Cargo.toml  build.rs  cbindgen_c.toml  cbindgen_cpp.toml
tachyon_core/benches/: float.rs  micro.rs  query.rs  read.rs  sqlite.rs  sum.rs  timescaledb.rs  write.rs
tachyon_core/src/: api.rs  e2e_tests.rs  error.rs  ffi.rs  lib.rs
tachyon_core/src/execution/: node.rs
tachyon_core/src/execution/node/: aggregate.rs  average.rs  binary_op.rs  get_k.rs  mod.rs  number_literal.rs  scalar_to_scalar.rs  vector_select.rs  vector_to_scalar.rs  vector_to_vector.rs
tachyon_core/src/executor/: mod.rs  node.rs
tachyon_core/src/query/: indexer.rs  mod.rs  node.rs  planner.rs
tachyon_core/src/storage/: compression.rs  file.rs  hash_map.rs  mod.rs  page_cache.rs  writer.rs
tachyon_core/src/storage/compression/: mod.rs
tachyon_core/src/storage/compression/float/: mod.rs  v1.rs
tachyon_core/src/storage/compression/int/: google.rs  mod.rs  v1.rs  v2.rs
tachyon_core/src/storage/writer/: in_memory_writer.rs  mod.rs  persistent_writer.rs  writer.rs
tachyon_core/src/utils/: file_utils.rs  mod.rs  test.rs  test_utils.rs
tachyon_gui/: index.html  package-lock.json  package.json
tachyon_gui/src-tauri/: Cargo.toml  tauri.conf.json
tachyon_gui/src-tauri/src/: lib.rs  main.rs
tachyon_web/: package-lock.json  package.json
tachyon_web/src/app/: layout.tsx  page.tsx
tachyon_web_backend/: Cargo.toml
tachyon_web_backend/src/: main.rs
