[package]
name = "tachyon"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
rusqlite = "0.31.0"
rustc-hash = "1.1.0"

[dev-dependencies]
pprof = { version = "0.13", features = ["flamegraph", "criterion"] }
criterion = { version = "0.5.1", features = ["html_reports"] }
postgres = "0.19.7"
sysinfo = "0.30.12"
csv = "1.3.0"
flate2 = "1.0.30"

[[bench]]
name = "read"
harness = false

[[bench]]
name = "write"
harness = false

[[bench]]
name = "micro"
harness = false

[[bench]]
name = "sqlite"
harness = false

[[bench]]
name = "timescaledb"
harness = false

[[bench]]
name = "sum"
harness = false

[profile.release]
codegen-units = 1
opt-level = 3
lto = "fat"

[profile.bench]
codegen-units = 1
opt-level = 3
lto = "fat"
debug = 1
