[package]
name = "tachyon"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "tachyon"
path = "src/cli.rs"

[dependencies]
clap = { version = "4.5.8", features = ["derive"] }
csv = "1.3.0"
prettytable-rs = "0.10.0"
promql-parser = "0.4.0"
rusqlite = { version = "0.31.0", features = ["uuid"] }
rustc-hash = "1.1.0"
rustyline = "14.0.0"
serde = "1.0.203"
serde_json = "1.0.117"
textplots = "0.8.6"
uuid = { version = "1.8.0", features = ["v4", "serde"] }

[dev-dependencies]
pprof = { version = "0.13", features = ["flamegraph", "criterion"] }
criterion = { version = "0.5.1", features = ["html_reports"] }
postgres = "0.19.7"
sysinfo = "0.30.12"
csv = "1.3.0"
flate2 = "1.0.30"

[[bench]]
name = "read"
harness = false

[[bench]]
name = "write"
harness = false

[[bench]]
name = "micro"
harness = false

[[bench]]
name = "sqlite"
harness = false

[[bench]]
name = "timescaledb"
harness = false

[[bench]]
name = "sum"
harness = false

[[bench]]
name = "query"
harness = false

[profile.release]
codegen-units = 1
opt-level = 3
lto = "fat"

[profile.bench]
codegen-units = 1
opt-level = 3
lto = "fat"
debug = 1
