[workspace]
members = ["tachyon_core", "tachyon_cli", "tachyon_gui/src-tauri"]
resolver = "2"

[profile.dev]
overflow-checks = true
lto = "off"
opt-level = 0
debug = "full"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3

[profile.bench]
inherits = "release"
overflow-checks = false
debug-assertions = false
debug = "full"
