[package]
name = "tachyon_cli"
version = "0.2.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
csv = "1.3.1"
dir-size = "0.1.1"
rustyline = "15.0.0"
tabled = "0.18.0"
tachyon_core = { path = "../tachyon_core", features = ["tachyon_benchmarks"] }
textplots = "0.8.6"
thiserror = "2.0.11"
