[package]
name = "tachyon_core"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
promql-parser = "0.4.0"
rusqlite = { version = "0.32.1", features = ["serde_json", "bundled", "uuid"] }
rustc-hash = "2.0.0"
serde = "1.0.208"
serde_json = "1.0.125"
uuid = { version = "1.10.0", features = ["v4", "fast-rng", "serde"] }

[build-dependencies]
cbindgen = "0.27.0"
