[package]
name = "tachyon_core"
version = "0.2.0"
edition = "2021"

[features]
tachyon_benchmarks = []

[lib]
crate-type = ["lib", "cdylib"]

[[bench]]
name = "micro"
harness = false

[[bench]]
name = "query"
harness = false

[[bench]]
name = "read"
harness = false

[[bench]]
name = "sqlite"
harness = false

[[bench]]
name = "sum"
harness = false

[[bench]]
name = "timescaledb"
harness = false

[[bench]]
name = "write"
harness = false

[dependencies]
promql-parser = "0.4.0"
rusqlite = { version = "0.32.1", features = ["serde_json", "bundled", "uuid"] }
rustc-hash = "2.0.0"
serde = "1.0.208"
serde_json = "1.0.125"
uuid = { version = "1.10.0", features = ["v4", "fast-rng", "serde"] }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["stable", "html_reports"] }
csv = "1.3.0"
postgres = "0.19.8"
pprof = { version = "0.13.0", features = ["cpp", "flamegraph", "criterion"] }
rusqlite = { version = "0.32.1", features = ["serde_json", "bundled", "uuid"] }
serde = "1.0.208"
serde_json = "1.0.125"
uuid = { version = "1.10.0", features = ["v4", "fast-rng", "serde"] }

[build-dependencies]
cbindgen = "0.27.0"
