[package]
name = "tachyon_core"
version = "0.2.0"
edition = "2021"

[features]
tachyon_benchmarks = []

[lib]
crate-type = ["lib", "cdylib"]

[[bench]]
name = "micro"
harness = false

[[bench]]
name = "query"
harness = false

[[bench]]
name = "read"
harness = false

[[bench]]
name = "sqlite"
harness = false

[[bench]]
name = "sum"
harness = false

[[bench]]
name = "timescaledb"
harness = false

[[bench]]
name = "write"
harness = false

[dependencies]
promql-parser = "0.4.3"
rusqlite = { version = "0.32.1", features = ["serde_json", "bundled", "uuid"] }
rustc-hash = "2.1.0"
serde = "1.0.217"
serde_json = "1.0.135"
thiserror = "2.0.11"
uuid = { version = "1.11.1", features = ["v4", "fast-rng", "serde"] }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["stable", "html_reports"] }
csv = "1.3.1"
postgres = "0.19.9"
pprof = { version = "0.14.0", features = ["cpp", "flamegraph", "criterion"] }
rusqlite = { version = "0.32.1", features = ["serde_json", "bundled", "uuid"] }
serde = "1.0.217"
serde_json = "1.0.135"
uuid = { version = "1.11.1", features = ["v4", "fast-rng", "serde"] }

[build-dependencies]
cbindgen = "0.27.0"
